--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <audio autoplay loop>
+  <source src="musica.mp3" type="audio/mpeg">
+</audio>
 
 <!-- TELA DE SENHA -->
 <div id="login" class="login">
@@ -87,4 +90,5 @@ function mostrarAmor() {
 </script>
 
 </body>
+
 </html>
